fix li overflow

--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -157,6 +157,8 @@ ol ul {
 li {
   margin-bottom: .5rem;
   margin-left: .5rem;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 li > p {
   margin-bottom: .3rem;
